added new mark for new profile

--- a/react/basic/src/App.css
+++ b/react/basic/src/App.css
@@ -38,6 +38,7 @@
 }
 
 .profile{
+  position: relative;
   width: 300px;
   text-align: center;
   padding: 1rem;
@@ -52,4 +53,15 @@
   height: 200px;
   object-fit: cover;
   border-radius: 100%;
+}
+
+.new{
+  position: absolute;
+  left: 70%;
+  top: 10%;
+  background-color: aquamarine;
+  padding: 0.2rem 0.5rem;
+  border-radius: 0.5rem;
+  text-transform: uppercase;
+  font-weight: bold;
 }
