--- a/react/basic/src/App.css
+++ b/react/basic/src/App.css
@@ -38,7 +38,6 @@
 }
 
 .profile{
-  position: relative;
   width: 300px;
   text-align: center;
   padding: 1rem;
@@ -64,4 +63,11 @@
   border-radius: 0.5rem;
   text-transform: uppercase;
   font-weight: bold;
+}
+
+.avatar{
+  position: relative;
+  width: 200px;
+  height: 200px;
+  margin: auto;
 }
