--- a/react/basic/src/App.css
+++ b/react/basic/src/App.css
@@ -32,21 +32,23 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
 
-.profile{
+.profile {
   width: 300px;
   text-align: center;
   padding: 1rem;
   background-color: #ebebeb;
-  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-  -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   margin-bottom: 1rem;
 }
+
 .photo {
   width: 200px;
   height: 200px;
@@ -54,7 +56,7 @@
   border-radius: 100%;
 }
 
-.new{
+.new {
   position: absolute;
   left: 70%;
   top: 10%;
@@ -65,7 +67,7 @@
   font-weight: bold;
 }
 
-.avatar{
+.avatar {
   position: relative;
   width: 200px;
   height: 200px;
@@ -73,38 +75,47 @@
 }
 
 /*Counter*/
-.container{
+.container {
   display: flex;
   justify-content: center;
 }
 
-.counter{
+.counter {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 2rem;
   padding: 1rem;
   border-radius: 1rem;
-  border: 2px solid rgb(215,127,12); 
+  border: 2px solid rgb(215, 127, 12);
 }
 
-.counter:hover{
+.counter:hover {
   background-color: rgb(246, 243, 197);
 }
 
-.number{
+.number {
   font-size: 7rem;
 }
 
-.button{
+.button {
   font-size: 2rem;
   padding: 0.2rem 1rem;
   border-radius: 0.5rem;
   cursor: pointer;
-  background: rgb(215,127,12);
-  background: linear-gradient(
-    90deg,
-    rgba(215, 127, 12, 1) 0%,
-    rgba(253, 220, 29, 1) 100%
-  );
+  background: rgb(215, 127, 12);
+  background: linear-gradient(90deg,
+      rgba(215, 127, 12, 1) 0%,
+      rgba(253, 220, 29, 1) 100%);
+}
+
+.banner {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+  background: rgba(253, 220, 29, 1) 100%
+}
+
+.total {
+  font-size: 1rem;
 }
